--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     <div class="repo-list">
 
       <div class="repo-item">
-        <h3 class="repo-title"><a href="https://github.com/MattSucato/javaProject1" target="_blank" rel="noopener">javaProject1</a></h3>
+        <h3 class="repo-title"><a href="https://github.com/MattSucato/MattSucato.github.io/blob/main/javaProject1" target="_blank" rel="noopener">javaProject1</a></h3>
         <p class="repo-desc">Matrix adder program in Java — reads two matrices, validates dimensions and prints the summed matrix in a formatted layout.</p>
       </div>
 
       <div class="repo-item">
-        <h3 class="repo-title"><a href="https://github.com/MattSucato/JavaProject2" target="_blank" rel="noopener">JavaProject2</a></h3>
+        <h3 class="repo-title"><a href="https://github.com/MattSucato/MattSucato.github.io/blob/main/javaProject2" target="_blank" rel="noopener">JavaProject2</a></h3>
         <p class="repo-desc">Ticket pricing and revenue calculator in Java — determines ticket prices from ages, prints daily revenue and ticket counts.</p>
       </div>
 
