java project 1 link

--- a/index.html
+++ b/index.html
@@ -63,20 +63,23 @@
     </div>
   </section>
 
-  <!-- NEW: Code repositories section -->
+  <!-- NEW: Single code repository link -->
   <section class="code-repos">
-    <h2>Code repositories</h2>
+    <h2>Code repository</h2>
 
     <div class="repo-list">
 
       <div class="repo-item">
-        <h3 class="repo-title"><a href="https://github.com/MattSucato/MattSucato.github.io/blob/main/javaProject1" target="_blank" rel="noopener">javaProject1</a></h3>
-        <p class="repo-desc">Matrix adder program in Java — reads two matrices, validates dimensions and prints the summed matrix in a formatted layout.</p>
-      </div>
-
-      <div class="repo-item">
-        <h3 class="repo-title"><a href="https://github.com/MattSucato/MattSucato.github.io/blob/main/javaProject2" target="_blank" rel="noopener">JavaProject2</a></h3>
-        <p class="repo-desc">Ticket pricing and revenue calculator in Java — determines ticket prices from ages, prints daily revenue and ticket counts.</p>
+        <h3 class="repo-title">
+          <a href="https://github.com/MattSucato/Algorithmic-Design-Labs/tree/main" 
+             target="_blank" 
+             rel="noopener">
+             Algorithmic Design Labs
+          </a>
+        </h3>
+        <p class="repo-desc">
+          A collection of Java programming labs covering algorithmic design, problem solving, loops, arrays, and more.
+        </p>
       </div>
 
     </div>
@@ -84,10 +87,7 @@
 
   <section class="contact">
     <h2>Contact me</h2>
-    <p>
-      <br>Email:
-      <a href="mailto:msucato@email.sc.edu">msucato@email.sc.edu</a>
-    </p>
+    <p><br>Email: <a href="mailto:msucato@email.sc.edu">msucato@email.sc.edu</a></p>
   </section>
 
   <footer class="site-footer">
@@ -96,3 +96,4 @@
 </main>
 </body>
 </html>
+
